--- a/FRONT-END/Privacidad/css/style.css
+++ b/FRONT-END/Privacidad/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .navbar{
     width: 100%;
     background-color: white;
@@ -30,8 +31,9 @@
     margin: 8px;
     
 }
+
 section{
-    background-image: url(..//img/Fondo.jpeg);
+    background-image: url(../../home/img/Fondo.jpeg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
@@ -40,54 +42,65 @@ section{
     text-align: center;
     font-size: 20px;
     padding: 450px 20px;
-    min-height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.btn{
-    margin-top: 5%;   
-}
-.fa-bars{
-    font-size: 40px;
-}
-@media (max-width: 768px) {
-    .nav1{
-        margin-right: 0;
-        margin-left: 0;
-    }
-
-    .log{
-        margin-right: 0;
-        margin-left: auto;
-        margin-bottom: 15px;
-        text-align: center;
-        display: block;
-    }
-
-    .navbar-nav{
-        text-align: center;
-    }
-}
-@media (max-width: 576px) {
-    .fa-bars {
-        font-size: 25px;
-    }
-
-    .btn {
-        font-size: 16px;
-    }
-
-    section {
-        padding: 350px 10px;
-    }
-
-    .navbar-brand img {
-        width: 130px;
-    }
+    min-height: 100vh;
+    margin-top: 100px;
 }
 
+.navbar-brand{
+    margin-left: 75vh;
+}
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    margin-top: 30px;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(55px);
+}
+
+.privacy-content {
+    text-align: justify;
+    margin: 20px 0;
+}
+
+.privacy-content h1 {
+    margin-bottom: 20px;
+}
+
+.privacy-content h2 {
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+.privacy-content p, .privacy-content li {
+    line-height: 1.6;
+}
+
+.privacy-content ul {
+    padding-left: 20px;
+}
+
+.privacy-content ul li {
+    margin-bottom: 10px;
+}
+
+.privacy-content a {
+    text-decoration: none;
+}
+
+.privacy-content a:hover {
+    text-decoration: underline;
+}
 footer {
     background-color: white;
     text-align: left;
