--- a/FRONT-END/Sobre_nosotros/css/style.css
+++ b/FRONT-END/Sobre_nosotros/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .navbar{
     width: 100%;
     background-color: white;
@@ -30,25 +31,7 @@
     margin: 8px;
     
 }
-section{
-    background-image: url(..//img/Fondo.jpeg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    color: white;
-    text-align: center;
-    font-size: 20px;
-    padding: 450px 20px;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.btn{
-    margin-top: 5%;   
-}
+
 .fa-bars{
     font-size: 40px;
 }
@@ -87,7 +70,59 @@ section{
         width: 130px;
     }
 }
+section{
+    background-image: url(../../home/img/Fondo.jpeg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding: 450px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin-top: 100px;
+}
 
+.navbar-brand{
+    margin-left: 75vh;
+}
+
+.icono {
+    width: 250px; /* Ajusta el tamaño según sea necesario */
+    height: auto;
+}
+
+.d-flex {
+    align-items: center; /* Alinea verticalmente todos los elementos dentro del contenedor */
+    justify-content: center; /* Centra el contenido horizontalmente */
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column; /* Coloca los elementos en una columna */
+    align-items: center; /* Centra el contenido en el eje horizontal */
+}
+
+#quienes-somos h3 {
+    margin-bottom: 0.5rem; /* Ajusta el margen inferior para colocar el título cerca de la imagen */
+}
+
+#quienes-somos p {
+    margin-top: 0.5rem; /* Ajusta el margen superior para colocar el párrafo cerca de la imagen */
+}
+.container{
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(55px);
+}
 footer {
     background-color: white;
     text-align: left;
