--- a/FRONT-END/Movimientos/css/style.css
+++ b/FRONT-END/Movimientos/css/style.css
@@ -1,4 +1,3 @@
-/* Continuación del código CSS */
 
 /* General Styles */
 * {
@@ -7,7 +6,17 @@
     box-sizing: border-box;
 }
 
-body {
+.cabecero{
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    width: 100%;
+    padding-top: 150px;
+    padding-bottom: 100px;
+    color: #fff;
+}
+.fondo {
     color: #555;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
@@ -15,6 +24,19 @@ body {
     position: relative;
     height: 100vh;
     padding-top: 70px;
+    background-image: url(../../Home/img/Fondo.jpeg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    font-size: 20px;
+    padding: 450px 20px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .limpiarEstilos::after {
@@ -25,6 +47,7 @@ body {
 
 .derecha {
     float: right;
+    color: white;
 }
 
 /* Header and Navigation */
@@ -59,7 +82,6 @@ header {
 /* Main Content Styles */
 .cabecero {
     height: 40vh;
-    background: url(../../Home/img/Fondo.jpeg);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -68,7 +90,14 @@ header {
     padding-bottom: 100px;
     color: #fff;
 }
-
+.contenedorFondo{
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(55px);
+    padding: 2rem 3rem;
+    margin: 0 auto;
+}
 .presupuesto {
     position: absolute;
     width: 350px;
@@ -140,7 +169,6 @@ header {
 .agregar {
     padding: 14px;
     border-bottom: 1px solid #e7e7e7;
-    background-color: #f7f7f7;
 }
 
 .agregar_contenedor {
@@ -175,6 +203,7 @@ header {
 
 .agregar_descripcion {
     width: 400px;
+    
 }
 
 .agregar_valor {
@@ -250,12 +279,11 @@ h2 {
     border-top: 1px solid #e7e7e7;
 }
 
-.elemento:nth-child(even) {
-    background-color: #f7f7f7;
-}
+
 
 .elemento_descripcion {
     float: left;
+    color: white;
 }
 
 .elemento_valor {
@@ -383,15 +411,39 @@ footer {
     overflow-x: hidden;
 }
 
-/* Estilo para los enlaces de ayuda en el footer */
-.footer-links ul {
-    list-style: none;
-    padding-left: 0;
-    margin-bottom: 0;
+/* Footer Styles */
+footer {
+    background-color: #f8f9fa;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
-.footer-links a {
-    text-decoration: none;
-    color: #6c757d;
-    margin-right: 15px; /* Espacio entre los enlaces */
+footer h5 {
+    color: #333;
+    margin-bottom: 15px;
+}
+
+footer .list-unstyled li {
+    margin-bottom: 10px;
+}
+
+footer .btn-primary {
+    background-color: #890cac;
+    border-color: #890cac;
+}
+
+footer .btn-primary:hover {
+    background-color: #6c0986;
+    border-color: #6c0986;
+}
+
+/* Responsive Adjustments */
+@media (max-width: 768px) {
+    .agregar_contenedor {
+        flex-direction: column;
+    }
+    
+    .presupuesto_valor {
+        font-size: 2rem;
+    }
 }
