--- a/FRONT-END/Contacto/css/style.css
+++ b/FRONT-END/Contacto/css/style.css
@@ -188,3 +188,7 @@ footer {
     color: #6c757d;
     margin-right: 15px; /* Espacio entre los enlaces */
 }
+
+header nav a{
+    text-decoration-line: none;
+}
